# esp32c6

./: Cargo.toml  README.md  build.rs  esp-toolchain.nix  run.fish  shell.nix
.cargo/: config.toml
esp32_std_1/: Cargo.toml
src/: main.rs
